[tool.poetry]
name = "home-assistant-sms-notifier"
version = "1.0.0"
description = "Home Assistant SMS notification system with store monitoring"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.0"
lxml = "^5.0.0"
selenium = "^4.0.0"
webdriver-manager = "^3.8.0"
fake-useragent = "^1.1.0"
toml = "^0.10.0"
tomlkit = "^0.11.0"
schedule = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
black = "^21.0"
flake8 = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]